[gd_scene load_steps=3 format=3 uid="uid://ddr4dtg2htl0l"]

[ext_resource type="Script" uid="uid://7px35d202ey0" path="res://scenes/UI/password.gd" id="1_4wxck"]

[sub_resource type="LabelSettings" id="LabelSettings_rnbxd"]
font_size = 32
shadow_color = Color(1, 1, 1, 0)

[node name="Password" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4wxck")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.137255, 0.137255, 0.729412)

[node name="PasswordContainer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.5
offset_top = -116.5
offset_right = 214.5
offset_bottom = 116.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223529, 0.313726, 0.360784, 1)

[node name="HeaderContainer" type="ColorRect" parent="PasswordContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 62.0
grow_horizontal = 2
color = Color(0.128797, 0.19008, 0.221999, 1)

[node name="Header" type="Label" parent="PasswordContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Enter password..."
label_settings = SubResource("LabelSettings_rnbxd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enter" type="Button" parent="PasswordContainer"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -54.0
offset_right = -16.0
offset_bottom = -13.0
grow_horizontal = 0
grow_vertical = 0
text = "Enter
"

[node name="Back" type="Button" parent="PasswordContainer"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -54.0
offset_right = 92.0
offset_bottom = -13.0
grow_vertical = 0
text = "Back"

[node name="PasswordLE" type="LineEdit" parent="PasswordContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.5
offset_top = -15.5
offset_right = 111.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Please enter password..."

[connection signal="pressed" from="PasswordContainer/Enter" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="PasswordContainer/Back" to="." method="_on_back_pressed"]
